downgrade project Java language from 17 to 11
the conductor app is coupled to the nashorn javascript engine, this was removed in JDK 15 and it is not pluggable.
https://github.com/Netflix/conductor/issues/2312
https://github.com/Netflix/conductor/blob/cd528e126ed36abedf38ac0eab07e18e1d476dad/core/src/main/java/com/netflix/conductor/core/events/ScriptEvaluator.java#L22